--- a/proxy/clash-mini.ini
+++ b/proxy/clash-mini.ini
@@ -8,7 +8,7 @@ ruleset=🎥 流媒体,https://github.geekery.cn/raw.githubusercontent.com/black
 ruleset=🎥 流媒体,https://github.geekery.cn/raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Disney/Disney.list
 ruleset=🎥 流媒体,https://github.geekery.cn/raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
 ruleset=🎥 流媒体,https://github.geekery.cn/raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
-;ruleset=➡️ 国内,https:///raw.githubusercontent.com/liandu2024/clash/refs/heads/main/list/Direct.list
+ruleset=➡️ 国内,https:///raw.githubusercontent.com/liandu2024/clash/refs/heads/main/list/Direct.list
 ruleset=🌍 国外,https://github.geekery.cn/raw.githubusercontent.com/liandu2024/clash/refs/heads/main/list/Check.list
 ruleset=🌍 国外,https://github.geekery.cn/raw.githubusercontent.com/liandu2024/clash/refs/heads/main/list/Proxy.list
 ruleset=🌍 国外,https://github.geekery.cn/raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Global/Global.list
